Not compiling on Java 17 due to missing case (javac fails)