@@ -132,16 +132,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <!--
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-              <compilerArgs>&#45;&#45;enable-preview</compilerArgs>
+              <compilerArgs>--enable-preview</compilerArgs>
                 <release>15</release>
             </configuration>
           </plugin>
-    -->
         </plugins>
     </build>
 </project>
